[gd_scene load_steps=2 format=2]

[ext_resource path="res://menu/menu.gd" type="Script" id=1]

[node name="Node2D" type="Control"]
margin_right = 200.0
margin_bottom = 200.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.215686, 0.176471, 0.152941, 1 )

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -75.0
margin_top = 27.0
margin_right = 75.0
margin_bottom = 44.0
text = "Crop Carnage"
align = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -27.0
margin_top = -25.0
margin_right = 27.0
margin_bottom = 25.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="PlayButton" type="Button" parent="VBoxContainer"]
margin_right = 54.0
margin_bottom = 23.0
text = "Play"

[node name="CreditsButton" type="Button" parent="VBoxContainer"]
margin_top = 27.0
margin_right = 54.0
margin_bottom = 50.0
text = "Credits"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
margin_top = 54.0
margin_right = 54.0
margin_bottom = 77.0
text = "Quit"

[connection signal="pressed" from="VBoxContainer/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="VBoxContainer/CreditsButton" to="." method="_on_CreditsButton_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
